# neurohear

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  api.md  contributing.md  installation.md  quickstart.md
examples/basic/: demo_stft.py
src/deploy/: __init__.py  onnx_export.py
src/neurohear/: __init__.py
src/neurohear/core/: __init__.py  stft.py
src/neurohear/models/: __init__.py
src/neurohear/models/compensation/: __init__.py
src/neurohear/models/denoising/: __init__.py
src/neurohear/models/feedback/: __init__.py
