[project]
name = "neurohear"
version = "0.1.0"
description = "A deep learning toolkit for hearing aid algorithms"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "NeuroHear Contributors" }
]
keywords = ["hearing-aid", "deep-learning", "audio", "speech-enhancement", "onnx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "torch>=2.0",
    "torchaudio",
    "onnx",
    "onnxruntime",
    "numpy",
    "scipy",
    "soundfile",
]

[project.optional-dependencies]
audio = [
    "pyaudio",  # Requires portaudio: apt install portaudio19-dev
]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/neurohear/neurohear"
Repository = "https://github.com/neurohear/neurohear"
Documentation = "https://github.com/neurohear/neurohear#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurohear", "src/deploy"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
